--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "^5.3.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "csrf": "^3.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
